# wsgateway

./: CMakeLists.txt  Dockerfile  README.md  findScyllaDblisteningPorts.sh  findScylladbIP.sh  network-config.sh  rm_scylla.sh  startScylla.sh  start_application.sh
cmake/: FindScylladbCppDriver.cmake
src/: App.cpp  AppComponent.h  ScyllaDBManager.h  config.h  env.conf  network-config.sh
src/client/: RestClient.h
src/controler/: WsController.h
src/utilis/: HttpParser.h  boostBeastAsyncClient.h  boostBeastClient.h  env.h  ipUtils.h  messageDTO.h  split.h  sslContext.h
src/websocket/: WebSocketComponents.h  WebSocketListener.cpp  WebSocketListener.h
